crates/usd-pyo3/tests/usdValidation/bin/usdchecker/testUsdChecker/bad/brokenRef.usd
version https://git-lfs.github.com/spec/v1
oid sha256:d801148d8bdc47e2183893728c73d69a9410add850ee17a11742bf4c4fb6ec33
size 102
